fix: corrige overflow horizontal no mobile

--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -34,6 +34,7 @@ section {
     section {
         height: unset;
         flex-direction: column;
+        align-items: stretch;
         gap: var(--padding);
 
         img {
