--- a/src/app/components/hero/hero.scss
+++ b/src/app/components/hero/hero.scss
@@ -8,6 +8,10 @@ section {
 }
 
 .kit-form-wrapper {
-    margin-top: -32px !important;
-    margin-left: -13px !important;
+    overflow-x: hidden;
+
+    @media (min-width: 769px) {
+        margin-top: -32px !important;
+        margin-left: -13px !important;
+    }
 }
